--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
         <div class="gradient-orb orb-1"></div>
         <div class="gradient-orb orb-2"></div>
         <div class="gradient-orb orb-3"></div>
+        <!-- <div class="gradient-orb orb-4"></div> Removed as it was not in original CSS -->
         <div class="floating-particles">
             <div class="particle"></div>
             <div class="particle"></div>
@@ -72,9 +73,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Toast Container -->
-    <div class="toast-container" id="toast-container"></div>
 
     <!-- Auth Container -->
     <div class="auth-container" id="auth-container">
@@ -140,14 +138,6 @@
 
             <!-- Signup Form -->
             <div class="auth-form" id="signup-form">
-                <div class="form-group">
-                    <label for="signup-name">အမည်</label>
-                    <div class="input-with-icon">
-                        <i class="fas fa-user"></i>
-                        <input type="text" id="signup-name" placeholder="သင့်အမည်ထည့်ပါ" required>
-                        <div class="input-focus-line"></div>
-                    </div>
-                </div>
                 <div class="form-group">
                     <label for="signup-email">အီးမေးလ်</label>
                     <div class="input-with-icon">
@@ -224,9 +214,9 @@
                 </div>
             </div>
             <div class="header-right">
-                <div class="notification-bell clickable" id="notification-bell-trigger">
+                <div class="notification-bell clickable">
                     <i class="fas fa-bell"></i>
-                    <span class="notification-badge" id="notification-badge">0</span>
+                    <span class="notification-badge">2</span>
                     <div class="notification-pulse"></div>
                 </div>
                 <div class="user-profile clickable" id="profile-dropdown-trigger">
@@ -285,13 +275,6 @@
                         <a href="#history" data-page="history" class="clickable">
                             <i class="fas fa-history"></i>
                             <span>မှတ်တမ်းများ</span>
-                            <div class="nav-indicator"></div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#posts" data-page="posts" class="clickable">
-                            <i class="fas fa-newspaper"></i>
-                            <span>ပို့စ်များ</span>
                             <div class="nav-indicator"></div>
                         </a>
                     </li>
@@ -378,14 +361,6 @@
                             <div class="action-text">မှတ်တမ်းများ</div>
                             <div class="card-hover-effect"></div>
                         </div>
-                        <div class="action-card clickable" data-page="posts">
-                            <div class="action-icon">
-                                <i class="fas fa-newspaper"></i>
-                                <div class="icon-glow"></div>
-                            </div>
-                            <div class="action-text">ပို့စ်များ</div>
-                            <div class="card-hover-effect"></div>
-                        </div>
                         <div class="action-card clickable" data-page="kyc">
                             <div class="action-icon">
                                 <i class="fas fa-id-card"></i>
@@ -428,7 +403,7 @@
                 </div>
 
                 <div id="recipient-info" style="display: none;"></div>
-                <form class="transfer-form" id="transfer-form">
+                <div class="transfer-form">
                     <div class="form-group">
                         <label for="transfer-phone">လက်ခံမည့်သူ၏ ဖုန်းနံပါတ်</label>
                         <div class="input-with-icon">
@@ -453,14 +428,14 @@
                             <div class="input-focus-line"></div>
                         </div>
                     </div>
-                    <button type="button" class="btn btn-primary btn-block clickable" id="transfer-btn">
+                    <button class="btn btn-primary btn-block clickable" id="transfer-btn">
                         <span class="btn-text">ငွေလွှဲမည်</span>
                         <i class="fas fa-paper-plane btn-icon"></i>
                         <div class="btn-ripple"></div>
                     </button>
                     <div class="auth-message error" id="transfer-error"></div>
                     <div class="auth-message success" id="transfer-success"></div>
-                </form>
+                </div>
             </section>
 
             <!-- History Page -->
@@ -498,20 +473,6 @@
                 </div>
             </section>
 
-            <!-- Posts Page -->
-            <section class="page" id="posts-page">
-                <div class="page-header">
-                    <h2>ပို့စ်များ</h2>
-                    <p>နောက်ဆုံးရ သတင်းများနှင့် အကြောင်းအရာများ</p>
-                </div>
-                <div class="posts-container" id="posts-container">
-                    <div class="empty-state">
-                        <i class="fas fa-newspaper"></i>
-                        <p>ပို့စ်များ မရှိသေးပါ</p>
-                    </div>
-                </div>
-            </section>
-
             <!-- KYC Page -->
             <section class="page" id="kyc-page">
                 <div class="page-header">
@@ -530,7 +491,7 @@
                     </div>
                 </div>
 
-                <form class="kyc-form" id="kyc-form">
+                <div class="kyc-form" id="kyc-form">
                     <div class="form-group">
                         <label for="kyc-passport">နိုင်ငံကူးလက်မှတ်နံပါတ်</label>
                         <div class="input-with-icon">
@@ -589,14 +550,14 @@
                             <div class="file-preview" id="selfie-preview"></div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary btn-block clickable" id="kyc-submit-btn">
+                    <button class="btn btn-primary btn-block clickable" id="kyc-submit-btn">
                         <span class="btn-text">တင်သွင်းမည်</span>
                         <i class="fas fa-check-circle btn-icon"></i>
                         <div class="btn-ripple"></div>
                     </button>
                     <div class="auth-message error" id="kyc-error"></div>
                     <div class="auth-message success" id="kyc-success"></div>
-                </form>
+                </div>
             </section>
 
             <!-- Settings Page -->
@@ -679,7 +640,7 @@
                 <div class="settings-card">
                     <h3>အကြောင်း</h3>
                     <div class="about-info">
-                        <p>OPPER Payment v2.2</p>
+                        <p>OPPER Payment v2.1</p> <!-- Version updated for new features -->
                         <p>&copy; 2024 OPPER Payment. All rights reserved.</p>
                     </div>
                 </div>
@@ -713,19 +674,6 @@
         </div>
     </div>
 
-    <!-- Notification Dropdown -->
-    <div class="dropdown-menu notification-dropdown" id="notification-dropdown">
-        <div class="notification-header">
-            <h4><i class="fas fa-gift"></i> လက်ဆောင်များ</h4>
-        </div>
-        <div class="notification-list-container" id="notification-list-container">
-            <div class="empty-state small">
-                <i class="fas fa-bell-slash"></i>
-                <p>အသိပေးချက်များ မရှိသေးပါ</p>
-            </div>
-        </div>
-    </div>
-
     <!-- Change Password Modal -->
     <div class="modal" id="change-password-modal">
         <div class="modal-content">
@@ -734,37 +682,35 @@
                 <button class="modal-close clickable">&times;</button>
             </div>
             <div class="modal-body">
-                <form id="change-password-form">
-                    <div class="form-group">
-                        <label for="current-password">လက်ရှိစကားဝှက်</label>
-                        <div class="input-with-icon">
-                            <i class="fas fa-lock"></i>
-                            <input type="password" id="current-password" placeholder="လက်ရှိစကားဝှက်ထည့်ပါ" required>
-                            <i class="fas fa-eye-slash toggle-password clickable"></i>
-                            <div class="input-focus-line"></div>
-                        </div>
+                <div class="form-group">
+                    <label for="current-password">လက်ရှိစကားဝှက်</label>
+                    <div class="input-with-icon">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" id="current-password" placeholder="လက်ရှိစကားဝှက်ထည့်ပါ" required>
+                        <i class="fas fa-eye-slash toggle-password clickable"></i>
+                        <div class="input-focus-line"></div>
                     </div>
-                    <div class="form-group">
-                        <label for="new-password">စကားဝှက်အသစ်</label>
-                        <div class="input-with-icon">
-                            <i class="fas fa-lock"></i>
-                            <input type="password" id="new-password" placeholder="စကားဝှက်အသစ်ထည့်ပါ" required>
-                            <i class="fas fa-eye-slash toggle-password clickable"></i>
-                            <div class="input-focus-line"></div>
-                        </div>
+                </div>
+                <div class="form-group">
+                    <label for="new-password">စကားဝှက်အသစ်</label>
+                    <div class="input-with-icon">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" id="new-password" placeholder="စကားဝှက်အသစ်ထည့်ပါ" required>
+                        <i class="fas fa-eye-slash toggle-password clickable"></i>
+                        <div class="input-focus-line"></div>
                     </div>
-                    <div class="form-group">
-                        <label for="confirm-new-password">စကားဝှက်အသစ်အတည်ပြုပါ</label>
-                        <div class="input-with-icon">
-                            <i class="fas fa-lock"></i>
-                            <input type="password" id="confirm-new-password" placeholder="စကားဝှက်အသစ်ပြန်ထည့်ပါ" required>
-                            <i class="fas fa-eye-slash toggle-password clickable"></i>
-                            <div class="input-focus-line"></div>
-                        </div>
+                </div>
+                <div class="form-group">
+                    <label for="confirm-new-password">စကားဝှက်အသစ်အတည်ပြုပါ</label>
+                    <div class="input-with-icon">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" id="confirm-new-password" placeholder="စကားဝှက်အသစ်ပြန်ထည့်ပါ" required>
+                        <i class="fas fa-eye-slash toggle-password clickable"></i>
+                        <div class="input-focus-line"></div>
                     </div>
-                    <div class="auth-message error" id="change-password-error"></div>
-                    <div class="auth-message success" id="change-password-success"></div>
-                </form>
+                </div>
+                <div class="auth-message error" id="change-password-error"></div>
+                <div class="auth-message success" id="change-password-success"></div>
             </div>
             <div class="modal-footer">
                 <button class="btn btn-outline modal-cancel clickable">မလုပ်တော့ပါ</button>
@@ -781,37 +727,35 @@
                 <button class="modal-close clickable">&times;</button>
             </div>
             <div class="modal-body">
-                <form id="change-pin-form">
-                    <div class="form-group">
-                        <label for="current-pin">လက်ရှိ PIN</label>
-                        <div class="input-with-icon">
-                            <i class="fas fa-lock"></i>
-                            <input type="password" id="current-pin" placeholder="လက်ရှိ PIN ထည့်ပါ" maxlength="6" required>
-                            <i class="fas fa-eye-slash toggle-password clickable"></i>
-                            <div class="input-focus-line"></div>
-                        </div>
+                <div class="form-group">
+                    <label for="current-pin">လက်ရှိ PIN</label>
+                    <div class="input-with-icon">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" id="current-pin" placeholder="လက်ရှိ PIN ထည့်ပါ" maxlength="6" required>
+                        <i class="fas fa-eye-slash toggle-password clickable"></i>
+                        <div class="input-focus-line"></div>
                     </div>
-                    <div class="form-group">
-                        <label for="new-pin">PIN အသစ်</label>
-                        <div class="input-with-icon">
-                            <i class="fas fa-lock"></i>
-                            <input type="password" id="new-pin" placeholder="PIN အသစ်ထည့်ပါ" maxlength="6" required>
-                            <i class="fas fa-eye-slash toggle-password clickable"></i>
-                            <div class="input-focus-line"></div>
-                        </div>
+                </div>
+                <div class="form-group">
+                    <label for="new-pin">PIN အသစ်</label>
+                    <div class="input-with-icon">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" id="new-pin" placeholder="PIN အသစ်ထည့်ပါ" maxlength="6" required>
+                        <i class="fas fa-eye-slash toggle-password clickable"></i>
+                        <div class="input-focus-line"></div>
                     </div>
-                    <div class="form-group">
-                        <label for="confirm-new-pin">PIN အသစ်အတည်ပြုပါ</label>
-                        <div class="input-with-icon">
-                            <i class="fas fa-lock"></i>
-                            <input type="password" id="confirm-new-pin" placeholder="PIN အသစ်ပြန်ထည့်ပါ" maxlength="6" required>
-                            <i class="fas fa-eye-slash toggle-password clickable"></i>
-                            <div class="input-focus-line"></div>
-                        </div>
+                </div>
+                <div class="form-group">
+                    <label for="confirm-new-pin">PIN အသစ်အတည်ပြုပါ</label>
+                    <div class="input-with-icon">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" id="confirm-new-pin" placeholder="PIN အသစ်ပြန်ထည့်ပါ" maxlength="6" required>
+                        <i class="fas fa-eye-slash toggle-password clickable"></i>
+                        <div class="input-focus-line"></div>
                     </div>
-                    <div class="auth-message error" id="change-pin-error"></div>
-                    <div class="auth-message success" id="change-pin-success"></div>
-                </form>
+                </div>
+                <div class="auth-message error" id="change-pin-error"></div>
+                <div class="auth-message success" id="change-pin-success"></div>
             </div>
             <div class="modal-footer">
                 <button class="btn btn-outline modal-cancel clickable">မလုပ်တော့ပါ</button>
@@ -883,7 +827,7 @@
                 <button class="modal-close clickable">&times;</button>
             </div>
             <div class="modal-body">
-                <p class="text-center mb-4" id="pin-recipient-info">ငွေလွှဲရန် သင့် PIN ကုဒ်ထည့်ပါ</p>
+                <p class="text-center mb-4">ငွေလွှဲရန် သင့် PIN ကုဒ်ထည့်ပါ</p>
                 <div class="pin-input-container">
                     <div class="pin-input-wrapper">
                         <input type="password" class="pin-input" maxlength="1" data-index="0">
@@ -897,14 +841,14 @@
                 <div class="auth-message error" id="pin-error"></div>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-outline modal-cancel clickable" id="cancel-pin-btn">မလုပ်တော့ပါ</button>
+                <button class="btn btn-outline modal-cancel clickable">မလုပ်တော့ပါ</button>
                 <button class="btn btn-primary clickable" id="confirm-pin-btn">အတည်ပြုသည်</button>
             </div>
         </div>
     </div>
 
     <!-- Receipt Modal -->
-    <div class="modal receipt-modal-animated" id="receipt-modal">
+    <div class="modal receipt-modal-animated" id="receipt-modal"> <!-- Added receipt-modal-animated class -->
         <div class="modal-content receipt-modal-content">
             <div class="modal-header receipt-header">
                 <h3>ငွေလွှဲပြေစာ</h3>
@@ -915,7 +859,7 @@
                     <button class="modal-close clickable">&times;</button>
                 </div>
             </div>
-            <div class="modal-body receipt-body" id="receipt-content">
+            <div class="modal-body receipt-body" id="receipt-container">
                 <!-- Receipt content will be dynamically generated -->
             </div>
         </div>
@@ -970,8 +914,8 @@
     <!-- Audio Elements -->
     <audio id="transfer-sent-sound" src="https://github.com/Opper125/opper-payment/raw/main/transfer_sent.mp3" preload="auto"></audio>
     <audio id="transfer-received-sound" src="https://github.com/Opper125/opper-payment/raw/main/transfer_received.mp3" preload="auto"></audio>
-    <audio id="click-sound" src="https://github.com/Opper125/opper-payment/raw/main/click.mp3" preload="auto"></audio>
-    <audio id="notification-sound" src="https://github.com/Opper125/opper-payment/raw/main/notification.mp3" preload="auto"></audio>
+    <audio id="click-sound" src="https://github.com/Opper125/opper-payment/raw/main/click.mp3" preload="auto"></audio> <!-- Please ensure click.mp3 exists at this URL or replace it -->
+
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="script.js"></script>
