--- a/public/index.html
+++ b/public/index.html
@@ -215,8 +215,7 @@
             <div class="header-right">
                 <div class="notification-bell clickable" id="notification-bell-trigger">
                     <i class="fas fa-bell"></i>
-                    <span class="notification-badge" id="notification-badge">0</span>
-                    <div class="notification-pulse"></div>
+                    <span class="notification-badge" id="notification-badge-count">0</span>
                 </div>
                 <div class="user-profile clickable" id="profile-dropdown-trigger">
                     <div class="user-avatar">
@@ -264,6 +263,13 @@
                         </a>
                     </li>
                     <li>
+                        <a href="#announcements" data-page="announcements" class="clickable">
+                            <i class="fas fa-bullhorn"></i>
+                            <span>ကြေညာချက်များ</span>
+                            <div class="nav-indicator"></div>
+                        </a>
+                    </li>
+                    <li>
                         <a href="#transfer" data-page="transfer" class="clickable">
                             <i class="fas fa-exchange-alt"></i>
                             <span>ငွေလွှဲရန်</span>
@@ -274,13 +280,6 @@
                         <a href="#history" data-page="history" class="clickable">
                             <i class="fas fa-history"></i>
                             <span>မှတ်တမ်းများ</span>
-                            <div class="nav-indicator"></div>
-                        </a>
-                    </li>
-                     <li>
-                        <a href="#posts" data-page="posts" class="clickable">
-                            <i class="fas fa-newspaper"></i> <!-- New Icon for Posts -->
-                            <span>ပို့စ်များ</span>
                             <div class="nav-indicator"></div>
                         </a>
                     </li>
@@ -318,6 +317,13 @@
                     <p>မင်္ဂလာပါ <span id="greeting-name">အကောင့်</span>!</p>
                 </div>
 
+                <!-- General Announcements Display Area -->
+                <div class="general-announcements-container" id="general-announcements-display">
+                    <!-- Announcements from server.html will be displayed here -->
+                </div>
+
+
+                <!-- Balance Card -->
                 <div class="balance-card">
                     <div class="balance-header">
                         <h3>လက်ကျန်ငွေ</h3>
@@ -346,6 +352,7 @@
                     </div>
                 </div>
 
+                <!-- Quick Actions -->
                 <div class="quick-actions">
                     <h3>အမြန်လုပ်ဆောင်ချက်များ</h3>
                     <div class="action-grid">
@@ -363,14 +370,6 @@
                                 <div class="icon-glow"></div>
                             </div>
                             <div class="action-text">မှတ်တမ်းများ</div>
-                            <div class="card-hover-effect"></div>
-                        </div>
-                         <div class="action-card clickable" data-page="posts">
-                            <div class="action-icon">
-                                <i class="fas fa-newspaper"></i>
-                                <div class="icon-glow"></div>
-                            </div>
-                            <div class="action-text">ပို့စ်များ</div>
                             <div class="card-hover-effect"></div>
                         </div>
                         <div class="action-card clickable" data-page="kyc">
@@ -392,6 +391,7 @@
                     </div>
                 </div>
 
+                <!-- Recent Transactions -->
                 <div class="recent-transactions">
                     <div class="section-header">
                         <h3>နောက်ဆုံးလုပ်ဆောင်ချက်များ</h3>
@@ -405,6 +405,22 @@
                     </div>
                 </div>
             </section>
+
+            <!-- Announcements Page -->
+            <section class="page" id="announcements-page">
+                <div class="page-header">
+                    <h2>ကြေညာချက်များ</h2>
+                    <p>နောက်ဆုံးရ သတင်းများနှင့် ကြေညာချက်များ</p>
+                </div>
+                <div class="announcements-list" id="announcements-list-content">
+                    <!-- Announcements will be loaded here -->
+                    <div class="empty-state">
+                        <i class="fas fa-bullhorn"></i>
+                        <p>ကြေညာချက်များ မရှိသေးပါ</p>
+                    </div>
+                </div>
+            </section>
+
 
             <!-- Transfer Page -->
             <section class="page" id="transfer-page">
@@ -480,21 +496,6 @@
                     <div class="empty-state">
                         <i class="fas fa-history"></i>
                         <p>လုပ်ဆောင်ချက်မှတ်တမ်းမရှိသေးပါ</p>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Posts Page -->
-            <section class="page" id="posts-page">
-                <div class="page-header">
-                    <h2>ပို့စ်များ</h2>
-                    <p>နောက်ဆုံးရ သတင်းများနှင့် အကြောင်းအရာများ</p>
-                </div>
-                <div class="posts-container" id="posts-container">
-                    <!-- Posts will be loaded here by script.js -->
-                    <div class="empty-state">
-                        <i class="fas fa-newspaper"></i>
-                        <p>ပို့စ်များ မရှိသေးပါ</p>
                     </div>
                 </div>
             </section>
@@ -666,7 +667,7 @@
                 <div class="settings-card">
                     <h3>အကြောင်း</h3>
                     <div class="about-info">
-                        <p>OPPER Payment v2.2</p> <!-- Version updated -->
+                        <p>OPPER Payment v2.1</p>
                         <p>&copy; 2024 OPPER Payment. All rights reserved.</p>
                     </div>
                 </div>
@@ -700,12 +701,18 @@
         </div>
     </div>
 
-    <!-- Notification Dropdown (for gifts) -->
-    <div class="dropdown-menu notification-dropdown" id="notification-dropdown">
-        <!-- Gift notifications will be populated here by script.js -->
-        <div class="dropdown-item no-notifications">
-            <i class="fas fa-bell-slash"></i>
-            <span>No new notifications</span>
+    <!-- Notification Dropdown -->
+    <div class="dropdown-menu notification-dropdown" id="notification-dropdown-menu">
+        <div class="notification-header">
+            <h3>အသိပေးချက်များ</h3>
+            <button class="btn btn-sm btn-outline clickable" id="mark-all-notifications-read">အားလုံးဖတ်ပြီး</button>
+        </div>
+        <div class="notification-list" id="notification-list-items">
+            <!-- Notifications will be loaded here -->
+            <div class="notification-empty-state">
+                <i class="fas fa-bell-slash"></i>
+                <p>အသိပေးချက်များ မရှိသေးပါ</p>
+            </div>
         </div>
     </div>
 
@@ -951,7 +958,8 @@
     <audio id="transfer-sent-sound" src="https://github.com/Opper125/opper-payment/raw/main/transfer_sent.mp3" preload="auto"></audio>
     <audio id="transfer-received-sound" src="https://github.com/Opper125/opper-payment/raw/main/transfer_received.mp3" preload="auto"></audio>
     <audio id="click-sound" src="https://github.com/Opper125/opper-payment/raw/main/click.mp3" preload="auto"></audio>
-    <audio id="notification-sound" src="https://github.com/Opper125/opper-payment/raw/main/notification.mp3" preload="auto"></audio> <!-- New notification sound -->
+    <audio id="notification-sound" src="https://github.com/Opper125/opper-payment/raw/main/notification.mp3" preload="auto"></audio> <!-- New sound for notifications -->
+    <audio id="gift-claim-sound" src="https://github.com/Opper125/opper-payment/raw/main/gift_claim.mp3" preload="auto"></audio> <!-- New sound for gift claims -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
